[tool.poetry]
name = "asetil"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ase = "^3.22.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
ruff = "^0.1.14"
mypy = "^1.8.0"


[tool.poetry.group.example.dependencies]
jupyterlab = "^4.0.11"
nglview = "^3.1.1"
pandas = "^2.2.0"
matplotlib = "^3.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
